dj-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: todo
    name: dj-dep
spec:
    replicas: 2
    selector:
      matchLabels:
          app: todo
    template:
        metadata:
          labels:
            app: todo
        spec:
          containers:
            - image: djangotodo
              imagePullPolicy: Never
              name: todo
              ports:
                - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: dj-svc
spec:
  type: NodePort
  selector:
    app: todo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30333
