dj-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dj-svc
spec:
  type: NodePort
  selector:
    app: todo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30333
