psql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: psql-svc
spec:
  type: NodePort
  selector:
    app: psql
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
      nodePort: 30111
