psql.yaml
apiVersion: v1
kind: Service
metadata:
  name: psql-service
spec:
  type: NodePort
  selector:
    app: todo
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
      nodePort: 30111
---
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: psql
    name: psql-dep
spec:
    replicas: 1
    selector:
      matchLabels:
          app: psql
    template:
        metadata:
          labels:
            app: psql
        spec:
          containers:
            - image: postgres
              name: postgres-container
              ports:
                - containerPort: 5432
