dj-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dj-ingress
  
spec:
  rules:
  - host: "todo.com"
    http:
    paths:
    - path: /
      backend:
        service:
          name: dj-svc
          port: 30333
